further frontend work

--- a/src/start/start.scss
+++ b/src/start/start.scss
@@ -1,20 +1,22 @@
-.org-list {
-    .list-group-item {
-        min-height: 45px;
-        padding-left: 50px;
+.start-controller {
+    .org-list {
+        .list-group-item {
+            min-height: 45px;
+            padding-left: 50px;
 
-        .avatar {
-            position: absolute;
-            top: 2px;
-            left: 2px;
-            border-radius: 4px;
-            width: 40px;
-            height: 40px;
-        }
+            .avatar {
+                position: absolute;
+                top: 2px;
+                left: 2px;
+                border-radius: 4px;
+                width: 40px;
+                height: 40px;
+            }
 
-        .org-info {
-            .description {
-                padding-left: 20px;
+            .org-info {
+                .description {
+                    padding-left: 20px;
+                }
             }
         }
     }
