--- a/src/org-select/org-select.scss
+++ b/src/org-select/org-select.scss
@@ -14,9 +14,10 @@
             }
 
             .org-info {
-                .description {
-                    padding-left: 20px;
-                }
+                display: inline-block;
+            }
+            .org-description {
+                padding-left: 20px;
             }
         }
     }
