--- a/src/repo-template/repo-template.scss
+++ b/src/repo-template/repo-template.scss
@@ -9,11 +9,15 @@
     }
 
     .repo-name-input {
-        border: 1px dotted #DDD;
+        border: 1px solid #DDD;
         border-radius: 7px;
         font-size: 2.5em;
         width: 100%;
         text-align: center;
+
+        input, span {
+            border: none;
+        }
     }
 
     .next {
